dynamic loading for elements #1 & refactoring view actions